tests/error/type_match/base_case_slice_const_propagation1.bz
// error: unable to match type 'mut *mut i32' to 'mut *i32'
// note: mismatched mutability of types 'mut i32' and 'i32'
// note: while matching expression of type '[: mut *mut i32]' to '[: mut *i32]'
function test()
{
	let _: [: mut *i32] = [: mut *mut i32]();
}
